# artifacts/api-server/src/routes/index.ts
@@ -1,10 +1,12 @@
 import { Router, type IRouter } from "express";
 import healthRouter from "./health";
 import materialsRouter from "./materials";
+import presenceRouter from "./presence";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
 router.use(materialsRouter);
+router.use(presenceRouter);
 
 export default router;
